2017-06-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/standard.h src/standard.c src/eval.c docs/gnuplot.doc:
	Use Bessel functions j0, j1, jn, y0, y1, yn from libm if present.
	These replace the hard-coded implementations besj0, besj1, besy0, besy1
	in standard.c.   The old versions are still present if needed.
	Add wrappers besjn(i, X) besyn(i, X).
	The hard-coded implementations claimed accuracy to 1.e-13.
	The libm implementations claim accuracy to 2.e-16.

2017-06-20  Ethan A Merritt  <merritt@u.washington.edu>

	Bump version number of development branch to 5.3

2017-06-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c (save_fit) src/util.h src/util.c (num_to_str):
	save_fit() is the only external caller of num_to_str().
	Call value_to_str() instead and make num_to_str() local to util.c.

	* src/internal.c (f_index):  Repair memory leak when a datablock
	is accessed as $DATABLOCK[index].

2017-06-18  Bastian Maerkisch  <bmaerkisch@web.de>

	Prepare use of HwndRenderTargets instead of a DCRenderTarget. This is a
	first step to support printing etc. also with the new Direct2D backend.

	* src/win/wd2d.cpp:  Direct2D uses coordinates in "device-independent-
	pixels" (DIPs).  For a DCRenderTarget these are identical to pixels,
	but for other rendering targets we need to take a conversion factor
	into account.  Fixes drawing with the HwndRenderTarget.

	* src/win/wd2d.cpp|h (d2dInit) src/win/wgnuplib.h src/win/wgraph.c:
	Create a new HwndRenderTarget for every graph window.  The
	DCRenderTarget can be shared.

2017-06-17  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c src/win/wgnuplib.h:  Remove the doublebuffer
	setting.  It is always enabled.

	* src/win/wgraph.c src/win/wgdiplus.cpp src/win/wd2d.cpp
	src/win/wgnuplib.h:  Remove remnants of the old oversampling code.

2017-06-15  Ethan A Merritt  <merritt@u.washington.edu>

	More corner-case failures found by fuzzing the demo set.
